# nonebot-plugin-petpet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update.yml  update_poetry_lock.yml  update_resource_list.yml
nonebot_plugin_petpet/: __init__.py  config.py  data_source.py  depends.py  download.py  ex_data_source.py  ex_functions.py  functions.py  manager.py  models.py  utils.py
resources/: resource_list.json  update_list.py
