[tool.poetry]
name = "nonebot_plugin_petpet"
version = "0.2.9"
description = "Nonebot2 plugin for making fun pictures"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MeetWq/nonebot-plugin-petpet"
repository = "https://github.com/MeetWq/nonebot-plugin-petpet"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
aiocache = ">=0.11.0"
httpx = ">=0.19.0"
imageio = "^2.12.0"
numpy = "^1.20.0"
Pillow = ">=8.2.0"
opencv-python = "^4.0.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
